docs: Change link from ddev.readthedocs.io to docs.ddev.com

--- a/src/components/quickstart/Examples.astro
+++ b/src/components/quickstart/Examples.astro
@@ -14,7 +14,7 @@ const { itemNumber, terminalType, terminalSymbol } = Astro.props;
 
   <p>
     Initialize the project by running the <a
-      href="https://ddev.readthedocs.io/en/stable/users/usage/commands/#config"
+      href="https://docs.ddev.com/en/stable/users/usage/commands/#config"
       target="_blank"
       ><code>ddev config</code></a>
     command:
@@ -29,14 +29,14 @@ const { itemNumber, terminalType, terminalSymbol } = Astro.props;
 
   <p>
     If it’s a Composer project, you may also need to run <a
-      href="https://ddev.readthedocs.io/en/stable/users/usage/commands/#composer"
+      href="https://docs.ddev.com/en/stable/users/usage/commands/#composer"
       target="_blank"
       ><code>ddev composer install</code></a>.
   </p>
 
   <p>
     Now run the <a
-      href="https://ddev.readthedocs.io/en/stable/users/usage/commands/#launch"
+      href="https://docs.ddev.com/en/stable/users/usage/commands/#launch"
       target="_blank">launch command</a
     > to open your project in a browser:
   </p>
@@ -51,7 +51,7 @@ const { itemNumber, terminalType, terminalSymbol } = Astro.props;
     this to your repo to share your DDEV config, edit <code
       >.ddev/config.yaml</code
     > to change <a
-      href="https://ddev.readthedocs.io/en/stable/users/configuration/config/"
+      href="https://docs.ddev.com/en/stable/users/configuration/config/"
       target="_blank"
       >project options</a
     >, or even go about your business and pretend this folder doesn’t exist.
@@ -59,7 +59,7 @@ const { itemNumber, terminalType, terminalSymbol } = Astro.props;
 
   <p>
     Run the <a
-      href="https://ddev.readthedocs.io/en/stable/users/usage/commands/#help"
+      href="https://docs.ddev.com/en/stable/users/usage/commands/#help"
       target="_blank"
       >help command</a>
     (or plain <code>ddev</code>) to see the actions you can take with the CLI:
@@ -69,7 +69,7 @@ const { itemNumber, terminalType, terminalSymbol } = Astro.props;
 
   <p>
     Use the <a
-      href="https://ddev.readthedocs.io/en/stable/users/usage/commands/#describe"
+      href="https://docs.ddev.com/en/stable/users/usage/commands/#describe"
       target="_blank"
       >describe command</a>
     to see a project’s parts and database connection details:
@@ -80,7 +80,7 @@ const { itemNumber, terminalType, terminalSymbol } = Astro.props;
   <p>
     If you’re done working on a project and want to shut it down without
     removing anything, use the <a
-      href="https://ddev.readthedocs.io/en/stable/users/usage/commands/#stop"
+      href="https://docs.ddev.com/en/stable/users/usage/commands/#stop"
       target="_blank"
       >stop command</a>:
   </p>
@@ -90,7 +90,7 @@ const { itemNumber, terminalType, terminalSymbol } = Astro.props;
   <p>
     If you were just kicking the tires and you want to permanently delete the
     project and its resources without touching your code, run the <a
-      href="https://ddev.readthedocs.io/en/stable/users/usage/commands/#delete"
+      href="https://docs.ddev.com/en/stable/users/usage/commands/#delete"
       target="_blank"
       >delete command</a>:
   </p>
