--- a/src/components/quickstart/Linux.astro
+++ b/src/components/quickstart/Linux.astro
@@ -14,7 +14,7 @@ const { latestVersion } = Astro.props
 <div class="prose dark:prose-invert">
   <p class="text-gray-600 mb-16 dark:text-slate-400">
     We’ll install Docker and DDEV with your package manager, as detailed in the <a
-      href="https://ddev.readthedocs.io/en/stable/users/install/ddev-installation/#linux"
+      href="https://docs.ddev.com/en/stable/users/install/ddev-installation/#linux"
       target="_blank"
       >Linux installation docs</a
     >.
@@ -125,7 +125,7 @@ The local CA is now installed in the Firefox and/or Chrome/Chromium trust store 
   <p></p>
 
   <p>
-    To <a href="https://ddev.readthedocs.io/en/stable/users/usage/uninstall/" target="_blank">uninstall</a> DDEV, first clean up its Docker bits and delete its files from
+    To <a href="https://docs.ddev.com/en/stable/users/usage/uninstall/" target="_blank">uninstall</a> DDEV, first clean up its Docker bits and delete its files from
     your system:
   </p>
 
