--- a/src/components/quickstart/Mac.astro
+++ b/src/components/quickstart/Mac.astro
@@ -14,7 +14,7 @@ const { latestVersion } = Astro.props
 <div class="prose dark:prose-invert">
   <p class="text-gray-600 mb-16 dark:text-slate-400">
     We’ll use OrbStack since it’s the simplest of <a
-      href="https://ddev.readthedocs.io/en/stable/users/install/docker-installation/#macos"
+      href="https://docs.ddev.com/en/stable/users/install/docker-installation/#macos"
       target="_blank"
       >several options</a
     >. OrbStack is not free for professional use, but several other options are open-source and free to use.
@@ -98,7 +98,7 @@ The local CA is now installed in the Firefox trust store (requires browser resta
   <p></p>
 
   <p>
-    To <a href="https://ddev.readthedocs.io/en/stable/users/usage/uninstall/" target="_blank">uninstall</a> DDEV, first clean up its Docker bits and delete its files from
+    To <a href="https://docs.ddev.com/en/stable/users/usage/uninstall/" target="_blank">uninstall</a> DDEV, first clean up its Docker bits and delete its files from
     your system:
   </p>
 
