--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -26,7 +26,7 @@ import { CloudIcon } from "@heroicons/react/24/solid/index.js"
         <CtaButton text="Get Started" href="/get-started" />
         <CtaButton
           text="Documentation"
-          href="https://ddev.readthedocs.io/"
+          href="https://docs.ddev.com/"
           type="hollow"
           target="_blank"
         />
