--- a/src/components/quickstart/Windows.astro
+++ b/src/components/quickstart/Windows.astro
@@ -14,7 +14,7 @@ const { latestVersion } = Astro.props
   <p class="text-gray-600 mb-16 dark:text-slate-400">
     We’ll use WSL2 with Docker-CE since it’s the fastest and most
     straightforward of <a
-      href="https://ddev.readthedocs.io/en/stable/users/install/docker-installation/#windows"
+      href="https://docs.ddev.com/en/stable/users/install/docker-installation/#windows"
       target="_blank"
       >several options</a
     >.
@@ -67,7 +67,7 @@ const { latestVersion } = Astro.props
   <p></p>
 
   <p>
-    To <a href="https://ddev.readthedocs.io/en/stable/users/usage/uninstall/" target="_blank">uninstall</a> DDEV, first clean up its Docker bits and delete its files from
+    To <a href="https://docs.ddev.com/en/stable/users/usage/uninstall/" target="_blank">uninstall</a> DDEV, first clean up its Docker bits and delete its files from
     your system:
   </p>
 
