Use different arrow, thanks @mattstein
Co-authored-by: Matt Stein <m@ttste.in>

--- a/src/components/quickstart/Windows.astro
+++ b/src/components/quickstart/Windows.astro
@@ -52,7 +52,7 @@ const { latestVersion } = Astro.props
 
   <div class="not-prose mb-6">
     <CtaButton
-      text="Download Windows Installer →" 
+      text="Download Windows Installer ↓" 
       href={`https://github.com/ddev/ddev/releases/download/${latestVersion}/ddev_windows_amd64_installer.${latestVersion}.exe`}
     />
   </div>
