--- a/src/components/quickstart/Windows.astro
+++ b/src/components/quickstart/Windows.astro
@@ -83,7 +83,9 @@ const { latestVersion } = Astro.props
     Project
   </h2>
 
-  <p>Inside the WSL2 "DDEV" distro (<strong>not on Windows</strong>), create a directory for your project or clone your project:</p>
+  <p>Tip: Watch the <a href="/blog/watch-ddev-local-from-scratch-with-windows-wsl2/">video tutorial</a> showing all of this.</p>
+
+  <p>Inside the WSL2 "DDEV" distro create a directory for your project or clone your project. (<strong>This is not on the C:\ drive; Use the "DDEV" or "Windows Terminal" apps to access it. Or use <code>Explorer > Linux > DDEV > /home/&lt;you&gt;</code> to see the files.</strong>) </p>
   <Terminal type={terminalType} code={`${terminalSymbol} mkdir -p ~/dev/my-project && cd ~/dev/my-project`} />
 
   <p>
