--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -76,7 +76,7 @@ const navigation = {
       <div class="grid grid-cols-auto gap-8 xl:col-span-4">
         <div class="md:grid md:grid-cols-4 md:gap-8">
           <div class="mt-12 md:mt-0">
-            <h2 class="text-sm font-mono text-navy-300 tracking-wider">
+            <h2 class="text-sm font-mono text-navy-300 tracking-wider dark:text-cyan-300">
               Support
             </h2>
             <ul class="mt-4 space-y-4 dark:text-white">
@@ -97,7 +97,7 @@ const navigation = {
             </ul>
           </div>
           <div class="mt-12 md:mt-0">
-            <h2 class="text-sm font-mono text-navy-300 tracking-wider">
+            <h2 class="text-sm font-mono text-navy-300 tracking-wider dark:text-cyan-300">
               Product
             </h2>
             <ul class="mt-4 space-y-4 dark:text-white">
@@ -118,7 +118,7 @@ const navigation = {
             </ul>
           </div>
           <div class="mt-12 md:mt-0">
-            <h2 class="text-sm font-mono text-navy-300 tracking-wider">
+            <h2 class="text-sm font-mono text-navy-300 tracking-wider dark:text-cyan-300">
               Social
             </h2>
             <ul class="mt-4 space-y-4 dark:text-white">
