--- a/src/components/BlogPostFooter.astro
+++ b/src/components/BlogPostFooter.astro
@@ -38,7 +38,7 @@ orderedPosts.forEach((post, index) => {
         title={`Previous: ${prev.data.title}`}
       >
         <div>
-          <span class="font-mono text-sm block text-navy-300 tracking-wider dark:text-slate-500">
+          <span class="font-mono text-sm block text-navy-300 tracking-wider dark:text-navy-100">
             Previous Post
           </span>
           <span class="py-3 md:w-full font-bold dark:text-slate-400">{prev.data.title}</span>
@@ -55,7 +55,7 @@ orderedPosts.forEach((post, index) => {
         title={`Next: ${next.data.title}`}
       >
         <div>
-          <span class="font-mono text-sm block text-navy-300 tracking-wider dark:text-slate-500">
+          <span class="font-mono text-sm block text-navy-300 tracking-wider dark:text-navy-100">
             Next Post
           </span>
           <span class="py-3 md:w-full font-bold dark:text-slate-400">{next.data.title}</span>
