--- a/src/components/SoftwareLogos.astro
+++ b/src/components/SoftwareLogos.astro
@@ -5,32 +5,28 @@
   <div class="max-w-7xl mx-auto py-12 px-4 sm:px-6 lg:px-8">
     <div class="flex justify-center content-center flex-wrap">
       <div class="p-10">
-        <img class="h-12 dark:invert" src="/logos/php.svg" alt="PHP logo" />
+        <img class="h-12 dark:invert" src="/logos/php.svg" alt="PHP logo" title="PHP" />
       </div>
-      <div class="p-10 mt-2 dark:invert">
-        <img class="h-6" src="/logos/node.svg" alt="Node.js logo" />
-      </div>
-      <div class="p-10">
-        <img class="h-16 -mt-4" src="/logos/mysql.svg" alt="MySQL logo" />
+      <div class="p-10 mt-2">
+        <img class="h-6 dark:invert" src="/logos/node.svg" alt="Node.js logo" title="Node.js" />
       </div>
       <div class="p-10">
-        <img
-          class="h-8 mt-1 dark:invert"
-          src="/logos/postgresql.png"
-          alt="PostgreSQL logo"
-        />
+        <img class="h-16 -mt-4" src="/logos/mysql.svg" alt="MySQL logo" title="MySQL" />
       </div>
       <div class="p-10">
-        <img class="h-4 mt-3 dark:invert" src="/logos/nginx.svg" alt="nginx logo" />
+        <img class="h-8 mt-1" src="/logos/postgresql.svg" alt="PostgreSQL logo" title="PostgreSQL" />
       </div>
       <div class="p-10">
-        <img class="h-4 mt-3" src="/logos/apache.svg" alt="Apache logo" />
+        <img class="h-4 mt-3 dark:invert" src="/logos/nginx.svg" alt="nginx logo" title="nginx" />
       </div>
       <div class="p-10">
-        <img class="h-5 mt-2" src="/logos/redis.svg" alt="Redis logo" />
+        <img class="h-4 mt-3 dark:invert-50" src="/logos/apache.svg" alt="Apache logo" title="Apache" />
       </div>
       <div class="p-10">
-        <img class="h-5 mt-2" src="/logos/memcached.svg" alt="Memcached logo" />
+        <img class="h-5 mt-2" src="/logos/redis.svg" alt="Redis logo" title="Redis" />
+      </div>
+      <div class="p-10">
+        <img class="h-5 mt-2" src="/logos/memcached.svg" alt="Memcached logo" title="Memcached" />
       </div>
     </div>
   </div>
