--- a/src/pages/blog/[id].astro
+++ b/src/pages/blog/[id].astro
@@ -119,7 +119,7 @@ const blogPostSchema = [
         {
           entry.data.categories.length && (
             <>
-              <span class="font-mono text-sm block text-navy-300 tracking-wider dark:text-slate-500">
+              <span class="font-mono text-sm block text-navy-300 tracking-wider dark:text-navy-100">
                 Posted In
               </span>
               <ul class="mt-1 dark:text-slate-400">
