--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -44,12 +44,24 @@ const jsonUrl = new URL(`/blog/feed.json`, Astro.site).toString()
             description="Official DDEV development and issues."
           />
           <RepoCard
+            name="ddev/ddev.com"
+            description="Astro source code used to generate ddev.com."
+          />
+          <RepoCard
             name="ddev/ddev-addon-template"
             description="A template for DDEV add-ons and services."
           />
           <RepoCard
-            name="ddev/ddev.com"
-            description="Astro source code used to generate ddev.com."
+            name="ddev/ddev-intellij-plugin"
+            description="DDEV Integration for JetBrains IDEs."
+          />
+          <RepoCard
+            name="ddev/vscode-ddev-manager"
+            description="DDEV Manager for VS Code."
+          />
+          <RepoCard
+            name="ddev/addon-registry"
+            description="A registry of DDEV add-ons."
           />
         </div>
       </div>
