--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -4,9 +4,8 @@
 header {
   a[target="_blank"] {
     &::after {
-      @apply inline-block w-3 h-3 ml-1 relative;
+      @apply inline-block w-3 h-3 ml-1 relative opacity-50 top-px;
       content: "";
-      top: 1px;
       background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' fill='none' viewBox='0 0 24 24' stroke-width='1.5' stroke='currentColor' class='w-6 h-6'%3E%3Cpath stroke-linecap='round' stroke-linejoin='round' d='M13.5 6H5.25A2.25 2.25 0 003 8.25v10.5A2.25 2.25 0 005.25 21h10.5A2.25 2.25 0 0018 18.75V10.5m-10.5 6L21 3m0 0h-5.25M21 3v5.25' /%3E%3C/svg%3E");
     }
   }
@@ -16,7 +15,7 @@ footer {
   ul a[target="_blank"] {
     &::after {
       content: "";
-      @apply inline-block w-3 h-3 ml-1 relative opacity-25 top-px;
+      @apply inline-block w-3 h-3 ml-1 relative opacity-50 top-px;
       background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' fill='none' viewBox='0 0 24 24' stroke-width='1.5' stroke='currentColor' class='w-6 h-6'%3E%3Cpath stroke-linecap='round' stroke-linejoin='round' d='M13.5 6H5.25A2.25 2.25 0 003 8.25v10.5A2.25 2.25 0 005.25 21h10.5A2.25 2.25 0 0018 18.75V10.5m-10.5 6L21 3m0 0h-5.25M21 3v5.25' /%3E%3C/svg%3E");
     }
   }
@@ -26,6 +25,7 @@ footer {
   header {
     a[target="_blank"] {
       &::after {
+        @apply opacity-75;
         filter: invert(42%) sepia(93%) saturate(1352%) hue-rotate(87deg)
           brightness(119%) contrast(119%);
       }
@@ -35,7 +35,7 @@ footer {
   footer {
     ul a[target="_blank"] {
       &::after {
-        opacity: 1;
+        @apply opacity-75;
         filter: invert(42%) sepia(93%) saturate(1352%) hue-rotate(87deg)
           brightness(119%) contrast(119%);
       }
