--- a/src/components/AppLogos.astro
+++ b/src/components/AppLogos.astro
@@ -3,13 +3,13 @@
  * Supported framework names and logos used on the homepage.
  */
 const logos = [
-  { name: "Drupal", src: "/logos/drupal.svg", extraClasses: [] },
-  { name: "WordPress", src: "/logos/wordpress.svg", extraClasses: [] },
-  { name: "TYPO3 CMS", src: "/logos/typo3.svg", extraClasses: [] },
-  { name: "Magento", src: "/logos/magento.svg", extraClasses: [] },
-  { name: "Backdrop CMS", src: "/logos/backdrop.svg", extraClasses: [] },
-  { name: "Craft CMS", src: "/logos/craft.svg", extraClasses: ["w-7"] },
-  { name: "Laravel", src: "/logos/laravel.svg", extraClasses: ["w-7"] },
+  { name: "Drupal", src: "/logos/drupal.svg", quickstart: "drupal", extraClasses: [] },
+  { name: "WordPress", src: "/logos/wordpress.svg", quickstart: "wordpress", extraClasses: [] },
+  { name: "TYPO3", src: "/logos/typo3.svg", quickstart: "typo3", extraClasses: [] },
+  { name: "Magento 2", src: "/logos/magento.svg", quickstart: "magento-2",extraClasses: [] },
+  { name: "Backdrop", src: "/logos/backdrop.svg", quickstart: "backdrop", extraClasses: [] },
+  { name: "Craft CMS", src: "/logos/craft.svg", quickstart: "craft-cms", extraClasses: ["w-7"] },
+  { name: "Laravel", src: "/logos/laravel.svg", quickstart: "laravel", extraClasses: ["w-7"] },
 ]
 ---
 
@@ -19,11 +19,13 @@ const logos = [
       {
         logos.map((logo) => (
           <div class="px-12 py-6">
-            <img
-              class={["h-12 dark:invert", ...logo.extraClasses].join(" ")}
-              src={logo.src}
-              alt={`${logo.name} logo`}
-            />
+            <a href={`https://docs.ddev.com/en/stable/users/quickstart/#${logo.quickstart}`} target="_blank" title={logo.name}>
+              <img
+                class={["h-12 dark:invert", ...logo.extraClasses].join(" ")}
+                src={logo.src}
+                alt={`${logo.name} logo`}
+              />
+            </a>
           </div>
         ))
       }
