--- a/src/pages/blog/author/[id].astro
+++ b/src/pages/blog/author/[id].astro
@@ -46,7 +46,7 @@ const { Content } = await render(author)
       </div>
     </div>
 
-    <h2 class="text-base font-mono text-navy-300 px-6 lg:px-0 dark:text-cyan-300">
+    <h2 class="text-base font-mono text-navy-300 px-6 lg:px-0 dark:text-navy-100">
       {author.data.firstName || author.data.name}’s {
         posts.length == 1 ? `Post` : `Posts`
       }
