Make repo name a bit smaller

--- a/src/components/RepoCard.astro
+++ b/src/components/RepoCard.astro
@@ -22,7 +22,7 @@ const repoData = await getRepoDetails(name)
 >
   <div class="">
     <div class="flex justify-between border-b px-3 py-3 dark:border-slate-700">
-      <h3 class="text-base font-bold">{name}</h3>
+      <h3 class="text-sm font-bold">{name}</h3>
       <div class="font-mono text-sm" style="margin-top: 2px">
         <StarIcon
           className="w-4 h-4 inline-block relative"
