--- a/src/components/RepoCard.astro
+++ b/src/components/RepoCard.astro
@@ -18,6 +18,7 @@ const repoData = await getRepoDetails(name)
 
 <a
   href={`https://github.com/${name}`}
+  target="_blank"
   class="border hover:border-blue-300 rounded-md shadow-sm hover:shadow-lg dark:border-slate-700"
 >
   <div class="">
