--- a/src/components/Contributors.astro
+++ b/src/components/Contributors.astro
@@ -16,7 +16,7 @@ const contributors = await getContributors()
       </h2>
     </div>
 
-    <h3 class="text-base font-mono text-navy-300 text-center mb-8">
+    <h3 class="text-base font-mono text-navy-300 text-center mb-8 dark:text-navy-100">
       GitHub Contributors
     </h3>
     <div class="max-w-5xl mx-auto flex flex-wrap justify-center">
@@ -40,14 +40,14 @@ const contributors = await getContributors()
       }
     </div>
 
-    <h3 class="mt-24 mb-8 text-base font-mono text-navy-300 text-center">
+    <h3 class="mt-24 mb-8 text-base font-mono text-navy-300 text-center dark:text-navy-100">
       Featured Sponsors
     </h3>
     <div class="max-w-4xl mx-auto flex flex-wrap justify-center">
       <FeaturedSponsors />
     </div>
 
-    <h3 class="mt-24 mb-8 text-base font-mono text-navy-300 text-center">
+    <h3 class="mt-24 mb-8 text-base font-mono text-navy-300 text-center dark:text-navy-100">
       GitHub Sponsors
     </h3>
     <div class="max-w-4xl mx-auto flex flex-wrap justify-center">
