--- a/src/components/Features.astro
+++ b/src/components/Features.astro
@@ -18,7 +18,7 @@ const features = [
   {
     name: "Modern Development Stack",
     description:
-      "PHP, Node.js, MySQL, PostgreSQL, nginx, Apache, Redis, MailHog, and more.",
+      "PHP, Node.js, MySQL, PostgreSQL, nginx, Apache, Redis, Mailpit, and more.",
     icon: CheckCircleIcon,
   },
   {
@@ -76,7 +76,7 @@ const features = [
   <div
     class="mx-auto max-w-md px-4 text-center sm:max-w-3xl sm:px-6 lg:max-w-7xl lg:px-8"
   >
-    <h2 class="text-base font-mono text-navy-300">Features</h2>
+    <h2 class="text-base font-mono text-navy-300 dark:text-navy-100">Features</h2>
     <p class="mt-2 text-3xl font-bold text-gray-900 sm:text-4xl dark:text-white">
       Running in minutes, ready for the long haul.
     </p>
@@ -92,7 +92,7 @@ const features = [
               <div class="rounded-lg px-6 pb-8">
                 <div class="-mt-6">
                   <div>
-                    <span class="icon inline-flex items-center justify-center rounded-md text-navy-300 p-3">
+                    <span class="icon inline-flex items-center justify-center rounded-md text-navy-300 p-3 dark:text-navy-100">
                       {() => {
                         return (
                           feature.icon && <feature.icon className="w-6 h-6" />
