feat: add feed links to footer

--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -67,6 +67,10 @@ const navigation = {
       me: true
     },
   ],
+  feeds: [
+    { name: "RSS", href: "/blog/rss.xml" },
+    { name: "JSON", href: "/blog/feed.json" },
+  ],
 }
 ---
 
@@ -74,7 +78,7 @@ const navigation = {
   <div class="max-w-4xl mx-auto py-12 px-6 lg:px-0 lg:py-16">
     <div class="pb-8 xl:grid xl:grid-cols-3 xl:gap-8">
       <div class="grid grid-cols-auto gap-8 xl:col-span-4">
-        <div class="md:grid md:grid-cols-4 md:gap-8">
+        <div class="md:grid md:grid-cols-2 lg:grid-cols-4 md:gap-8">
           <div class="mt-12 md:mt-0">
             <h2 class="text-sm font-mono text-navy-300 tracking-wider dark:text-navy-100">
               Support
@@ -134,6 +138,26 @@ const navigation = {
                         {item.name}
                       </a>
                     </li>
+                ))
+              }
+            </ul>
+          </div>
+          <div class="mt-12 md:mt-0">
+            <h2 class="text-sm font-mono text-navy-300 tracking-wider dark:text-navy-100">
+              Feeds
+            </h2>
+            <ul class="mt-4 space-y-4 dark:text-white">
+              {
+                navigation.feeds.map((item) => (
+                  <li>
+                    <a
+                      href={item.href}
+                      class="text-base"
+                      target={item.target || '_self'}
+                    >
+                      {item.name}
+                    </a>
+                  </li>
                 ))
               }
             </ul>
