Add 'Newletter' category and put newsletters in it

--- a/src/pages/newsletter.astro
+++ b/src/pages/newsletter.astro
@@ -20,6 +20,8 @@ const title = `Newsletter`
 
     <div class="prose dark:prose-invert my-8">
     This is a low-volume newsletter, usually just once a month. We'd love to be able to keep in touch with you.
+      
+      <a href="/blog/category/newsletter">See previous newsletters</a>.
     </div>
     <!-- NEW FORM GOES BELOW HERE -->
 
