--- a/src/components/quickstart/Windows.astro
+++ b/src/components/quickstart/Windows.astro
@@ -61,12 +61,12 @@ const { latestVersion } = Astro.props
   <div class="not-prose mb-6 grid grid-cols-1 sm:grid-cols-2 gap-4 text-center">
     <CtaButton
       text="Download for AMD64 ↓\n(Intel/AMD)"
-      href="/download/windows/amd64"
+      href="/download/ddev_windows_amd64_installer.exe"
       title="For computers with Intel or AMD processors (most common)"
     />
     <CtaButton
       text="Download for ARM64 ↓\n(Snapdragon)"
-      href="/download/windows/arm64"
+      href="/download/ddev_windows_arm64_installer.exe"
       title="For computers with ARM processors like Qualcomm Snapdragon"
     />
   </div>
