Add "Download DDEV Binaries" page

--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -28,6 +28,7 @@ const navigation = {
   ],
   product: [
     { name: "About", href: "/about" },
+    { name: "Download", href: "/download" },
     { name: "Swag Shop", href: STORE_URL, target: "_blank"},
     { name: "Contributing", href: "/support-ddev" },
     { name: "Contributor Live Training", href: "/blog/contributor-training"},
